--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name='NoBarTheme' parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="android:buttonStyle">@style/Base.Widget.AppCompat.Button.Borderless</item>
-        <item name="android:windowActivityTransitions">true</item>
-            </style>
+        <item  name="android:imageButtonStyle">@style/Base.Widget.AppCompat.Button.Borderless</item>
+        <item name="android:windowContentTransitions">true</item>
+    </style>
 </resources>
