--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,5 +13,6 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="android:buttonStyle">@style/Base.Widget.AppCompat.Button.Borderless</item>
+        <item  name="android:imageButtonStyle">@style/Base.Widget.AppCompat.Button.Borderless</item>
     </style>
 </resources>
