--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,91 +8,123 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="31dp"
-    android:transitionName="background"
     android:paddingHorizontal="30dp"
     android:paddingVertical="15dp"
+    android:transitionName="background"
     tools:context="io.eklesia.eklesia.RegisterActivity">
-
-    <TextView
-        style="@style/TextAppearance.AppCompat.Body1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:transitionName="titolo"
-        android:paddingBottom="8dp"
-        android:text="REGISTRATI"
-        android:textAlignment="center"
-        android:textColor="@color/colorPrimary"/>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/email_text_input_register"
-        android:transitionName="emailTextInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/email_edit_text_register"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/stringa_email"
-            android:inputType="text"
-            />
-
-    </android.support.design.widget.TextInputLayout>
-
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/password_text_input_register"
-        android:layout_width="match_parent"
-        android:transitionName="passwordTextInput"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/colorPrimary">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/password_edit_text_register"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/stringa_password"
-            android:inputType="textPassword"/>
-
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/conferma_password_text_input_register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/conferma_password_edit_text_register"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/stringa_conferma_password"
-            android:inputType="textPassword"/>
-
-    </android.support.design.widget.TextInputLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone">
+        android:id="@+id/register_panel_1"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
-        <Button
 
-            android:layout_width="wrap_content"
+        <TextView
+            style="@style/TextAppearance.AppCompat.Display3"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/stringa_accedi"
-            android:textColor="@color/colorPrimary"/>
+            android:paddingBottom="8dp"
+            android:text="Ciao."
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:transitionName="titolo"/>
 
-        <Button
-
-            android:layout_width="wrap_content"
+        <TextView
+            style="@style/TextAppearance.AppCompat.Display4"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/stringa_registrati"
-            android:textColor="@color/colorPrimary"/>
+            android:paddingBottom="8dp"
+            android:text="Iniziamo"
+            android:textAlignment="center"
+            android:textSize="32dp"
+            android:transitionName="titolo"/>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/email_text_input_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:transitionName="emailTextInput"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/email_edit_text_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/stringa_email"
+                android:inputType="text"
+                />
+
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/password_text_input_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:transitionName="passwordTextInput"
+            app:errorEnabled="true"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/colorPrimary">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/password_edit_text_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/stringa_password"
+                android:inputType="textPassword"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/conferma_password_text_input_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/conferma_password_edit_text_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/stringa_conferma_password"
+                android:inputType="textPassword"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="61dp"
+            android:visibility="gone">
+
+            <Button
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/stringa_accedi"
+                android:textColor="@color/colorPrimary"/>
+
+            <Button
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/stringa_registrati"
+                android:textColor="@color/colorPrimary"/>
+        </LinearLayout>
     </LinearLayout>
+    <Button
+        android:id="@+id/continua_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/register_panel_1"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/rounded_borders_button"
+        android:paddingHorizontal="96dp"
+        android:paddingVertical="16dp"
+        android:text="CONTINUA"
+        android:textColor="@color/colorAccent"/>
 
 
-</LinearLayout>
+</RelativeLayout>
