--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
             style="@style/TextAppearance.AppCompat.Display3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
+            android:padding="8dp"
             android:text="Ciao."
             android:textAlignment="center"
             android:textColor="@color/colorPrimary"
@@ -35,7 +35,7 @@
             style="@style/TextAppearance.AppCompat.Display4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
+            android:paddingBottom="16dp"
             android:text="Iniziamo"
             android:textAlignment="center"
             android:textSize="32dp"
@@ -116,13 +116,12 @@
     </LinearLayout>
     <Button
         android:id="@+id/continua_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:transitionName="pulsante"
         android:layout_below="@id/register_panel_1"
         android:layout_centerHorizontal="true"
         android:background="@drawable/rounded_borders_button"
-        android:paddingHorizontal="96dp"
-        android:paddingVertical="16dp"
+        android:layout_width="232dp"
+        android:layout_height="48dp"
         android:text="CONTINUA"
         android:textColor="@color/colorAccent"/>
 
