--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -9,7 +9,8 @@
         <item  name="android:imageButtonStyle">@style/Base.Widget.AppCompat.Button.Borderless</item>
         <item name="android:windowContentTransitions">true</item>
         <!-- specify enter and exit transitions -->
-        <item name="android:windowEnterTransition">@android:transition/explode</item>
-        <item name="android:windowExitTransition">@android:transition/explode</item>
+        <item name="android:windowEnterTransition">@transition/fade</item>
+        <item name="android:windowExitTransition">@transition/explode</item>
+
     </style>
 </resources>
