--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,9 +8,13 @@
         <item name="android:buttonStyle">@style/Base.Widget.AppCompat.Button.Borderless</item>
         <item  name="android:imageButtonStyle">@style/Base.Widget.AppCompat.Button.Borderless</item>
         <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowActivityTransitions">true</item>
         <!-- specify enter and exit transitions -->
-        <item name="android:windowEnterTransition">@transition/fade</item>
-        <item name="android:windowExitTransition">@transition/explode</item>
+        <!--<item name="android:windowEnterTransition">@android:transition/slide_top</item>
+        <item name="android:windowExitTransition">@android:transition/slide_top</item>-->
+        <!--<item name="android:windowAllowEnterTransitionOverlap">false</item>
+        <item name="android:windowAllowReturnTransitionOverlap">false</item>-->
+
 
     </style>
 </resources>
