--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,10 +14,10 @@
     tools:context="io.eklesia.eklesia.RegisterActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
         android:id="@+id/register_panel_1"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
 
         <TextView
@@ -91,39 +91,18 @@
                 android:inputType="textPassword"/>
 
         </android.support.design.widget.TextInputLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="61dp"
-            android:visibility="gone">
-
-            <Button
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/stringa_accedi"
-                android:textColor="@color/colorPrimary"/>
-
-            <Button
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/stringa_registrati"
-                android:textColor="@color/colorPrimary"/>
-        </LinearLayout>
     </LinearLayout>
+
     <Button
         android:id="@+id/continua_register"
-        android:transitionName="pulsante"
+        android:layout_width="232dp"
+        android:layout_height="48dp"
         android:layout_below="@id/register_panel_1"
         android:layout_centerHorizontal="true"
         android:background="@drawable/rounded_borders_button"
-        android:layout_width="232dp"
-        android:layout_height="48dp"
         android:text="CONTINUA"
-        android:textColor="@color/colorAccent"/>
+        android:textColor="@color/colorAccent"
+        android:transitionName="pulsante"/>
 
 
 </RelativeLayout>
