--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,9 +7,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="31dp"
-    android:paddingHorizontal="30dp"
-    android:paddingVertical="15dp"
+    android:paddingRight="30dp"
+    android:paddingLeft="30dp"
+    android:paddingTop="15dp"
+    android:paddingBottom="15dp"
     android:transitionName="background"
     tools:context="io.eklesia.eklesia.RegisterActivity">
 
