--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -7,9 +7,10 @@
     android:id="@+id/register2_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="31dp"
-    android:paddingHorizontal="30dp"
-    android:paddingVertical="15dp"
+    android:paddingRight="30dp"
+    android:paddingLeft="30dp"
+    android:paddingTop="15dp"
+    android:paddingBottom="15dp"
     tools:context="io.eklesia.eklesia.RegisterActivity2">
 
     <LinearLayout
