--- a/app/src/main/res/layout/fragment_incontri.xml
+++ b/app/src/main/res/layout/fragment_incontri.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:id="@+id/recycler_incontri"
     android:layout_height="match_parent"
-    tools:context="io.eklesia.eklesia.IncontriFragment"
-    android:fitsSystemWindows="true">
+    tools:context="io.eklesia.eklesia.IncontriFragment">
 
 </android.support.v7.widget.RecyclerView>
 
