--- a/app/src/main/res/layout/activity_chiesa.xml
+++ b/app/src/main/res/layout/activity_chiesa.xml
@@ -49,7 +49,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Chiesa Evangelica bergamo"
+                        android:id="@+id/nome_chiesa_activity"
                         android:textAlignment="center"
                         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                         android:textColor="@android:color/white"
@@ -60,7 +60,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="4dp"
                         android:layout_marginTop="4dp"
-                        android:text="Via G. Galli 1"
+                        android:id="@+id/indirizzo_chiesa_activity"
                         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                         android:textColor="@android:color/white"
                         />
@@ -107,7 +107,6 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:elevation="10dp"
-        android:src="@drawable/photo"
         app:civ_border_color="#FFF"
         app:civ_border_width="2dp"
         app:layout_anchor="@+id/contenitore_info_chiesa"
