--- a/app/src/main/res/layout/activity_chiesa.xml
+++ b/app/src/main/res/layout/activity_chiesa.xml
@@ -10,60 +10,113 @@
         android:id="@+id/main.appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:stateListAnimator="@animator/appbar_always_elevated"
+        android:background="@android:color/transparent"
         >
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="360dp"
+            android:layout_height="400dp"
             app:contentScrim="@color/colorAccent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
+                android:id="@+id/sfondo"
                 android:layout_width="match_parent"
-                android:layout_height="240dp"
+                android:layout_height="280dp"
                 android:background="@color/colorPrimary"
-                app:layout_collapseMode="parallax"/>
+                app:layout_collapseMode="none"/>
 
 
             <RelativeLayout
                 android:id="@+id/contenitore_info_chiesa"
                 android:layout_width="match_parent"
-                android:layout_height="140dp"
+                android:layout_height="168dp"
                 android:layout_gravity="start"
-                android:layout_marginTop="72dp"
+                android:layout_marginTop="80dp"
                 android:gravity="center"
-                android:paddingTop="8dp"
+                android:paddingTop="16dp"
                 app:layout_collapseMode="parallax">
 
                 <LinearLayout
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="30dp"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+
+                    <RelativeLayout
+                        android:gravity="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:visibility="gone"
+                            android:id="@+id/miachiesa.congregazione_textview"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="#FF3F80"
+                            android:textColor="@android:color/white"
+                            android:paddingLeft="3dp"
+                            android:paddingRight="3dp"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignRight="@+id/nome_chiesa_activity"
+                            style="@style/TextAppearance.AppCompat.Caption"
+                            android:text="congregazione"/>
+
+                        <TextView
+                            android:layout_marginTop="12dp"
+                            android:id="@+id/nome_chiesa_activity"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Nome Chiesa"
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                            android:textColor="@android:color/white"
+                            />
+                    </RelativeLayout>
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/nome_chiesa_activity"
-                        android:textAlignment="center"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                        android:textColor="@android:color/white"
-                        />
-
-                    <TextView
+                        android:id="@+id/indirizzo_chiesa_activity"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="4dp"
                         android:layout_marginTop="4dp"
-                        android:id="@+id/indirizzo_chiesa_activity"
+                        android:text="indirizzo della chiesa"
                         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
-                        android:textColor="@android:color/white"
-                        />
+                        android:textColor="@android:color/white"/>
+
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/miachiesa.sito_textview"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="www.sito.it"
+                            android:textAlignment="viewEnd"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+                            android:textColor="@android:color/white"
+                            />
+
+                        <TextView
+                            android:id="@+id/miachiesa.email_textview"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="email@sito.it"
+                            android:textAlignment="viewStart"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+                            android:textColor="@android:color/white"
+                            />
+
+
+                    </LinearLayout>
                 </LinearLayout>
                 ​
 
@@ -76,9 +129,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="top"
+                app:titleTextColor="@color/colorPrimary"
                 android:layout_marginBottom="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:theme="@style/ThemeOverlay.AppCompat.Light"/>
+                app:layout_collapseMode="pin"/>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
@@ -107,6 +160,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:elevation="10dp"
+        android:src="@drawable/photo"
         app:civ_border_color="#FFF"
         app:civ_border_width="2dp"
         app:layout_anchor="@+id/contenitore_info_chiesa"
@@ -118,11 +172,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="?attr/actionBarSize"
-        android:paddingTop="4dp"
-        android:elevation="8dp"
-        app:layout_anchor="@+id/tabs"
-        app:layout_anchorGravity="top">
+        android:background="@android:color/transparent"
+        app:layout_anchor="@+id/sfondo"
+        app:layout_anchorGravity="bottom|center_horizontal">
 
 
         <LinearLayout
@@ -132,21 +184,49 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="4dp"
-            android:background="@android:color/white"
+            android:clipToPadding="false"
             android:orientation="horizontal"
+            android:padding="8dp"
             >
 
             <Button
-                android:layout_width="wrap_content"
+                android:id="@+id/miachiesa.pulsante_localizza"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
-                android:text="Chiama"/>
+                android:background="@drawable/rounded_borders_button"
+                android:backgroundTint="#FF3F80"
+                android:drawableStart="@drawable/ic_location_on_black_24dp"
+                android:drawableTint="@android:color/white"
+                android:elevation="4dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="Chiama"
+                android:textAlignment="viewStart"
+                android:textColor="@android:color/white"
+                android:textSize="12dp"/>
 
             <Button
-                android:layout_width="wrap_content"
+                android:id="@+id/miachiesa.pulsante_chiama"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_weight="1"
-                android:text="Localizza"/>
+                android:background="@drawable/rounded_borders_button"
+                android:backgroundTint="#FF3F80"
+                android:drawableStart="@drawable/ic_call_black_24dp"
+                android:drawableTint="@android:color/white"
+                android:elevation="4dp"
+                android:maxLines="1"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="Localizza"
+                android:textAlignment="viewStart"
+                android:textColor="@android:color/white"
+                android:textSize="12dp"/>
         </LinearLayout>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
