--- a/app/src/main/res/layout/activity_chiesa.xml
+++ b/app/src/main/res/layout/activity_chiesa.xml
@@ -10,14 +10,13 @@
         android:id="@+id/main.appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        android:background="@android:color/white"
         >
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            app:contentScrim="@color/colorAccent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
@@ -48,29 +47,28 @@
                     android:paddingRight="16dp">
 
                     <RelativeLayout
-                        android:gravity="center"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:gravity="center">
 
                         <TextView
-                            android:visibility="gone"
                             android:id="@+id/miachiesa.congregazione_textview"
+                            style="@style/TextAppearance.AppCompat.Caption"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="#FF3F80"
-                            android:textColor="@android:color/white"
-                            android:paddingLeft="3dp"
-                            android:paddingRight="3dp"
                             android:layout_alignParentTop="true"
                             android:layout_alignRight="@+id/nome_chiesa_activity"
-                            style="@style/TextAppearance.AppCompat.Caption"
-                            android:text="congregazione"/>
+                            android:paddingLeft="3dp"
+                            android:paddingRight="3dp"
+                            android:text="congregazione"
+                            android:textColor="#FF3F80"
+                            android:visibility="gone"/>
 
                         <TextView
-                            android:layout_marginTop="12dp"
                             android:id="@+id/nome_chiesa_activity"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
                             android:text="Nome Chiesa"
                             android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
@@ -82,7 +80,6 @@
                         android:id="@+id/indirizzo_chiesa_activity"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
                         android:layout_marginTop="4dp"
                         android:text="indirizzo della chiesa"
                         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
@@ -129,9 +126,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="top"
-                app:titleTextColor="@color/colorPrimary"
                 android:layout_marginBottom="?attr/actionBarSize"
-                app:layout_collapseMode="pin"/>
+                app:layout_collapseMode="pin"
+                android:theme="@style/Toolbar"
+                android:background="@color/colorPrimary"
+                app:titleTextColor="@color/colorPrimary"/>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
