--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -12,20 +12,18 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:clipToPadding="false"
-        android:elevation="0dp"
-        app:elevation="0dp">
+        android:clipToPadding="false">
 
         <android.support.v7.widget.Toolbar
 
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:layout_marginRight="16dp"
+            android:background="@android:color/white"
+            android:elevation="8dp"
             android:fitsSystemWindows="true"
             android:gravity="top"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
+            app:layout_scrollFlags="enterAlways"
             app:titleTextColor="#FFFFFF">
 
             <RelativeLayout
@@ -39,7 +37,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:clickable="true"
-                    android:src="@drawable/ic_home_black_24dp"
+                    android:srcCompat="@drawable/ic_church"
                     android:tint="@color/colorPrimary"/>
 
                 <ImageView
@@ -49,46 +47,11 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:clickable="true"
-                    android:src="@drawable/ic_account_circle_black_24dp"
+                    android:layout_marginRight="16dp"
+                    app:srcCompat="@drawable/ic_account_circle_black_24dp"
                     android:tint="@color/colorPrimary"/>
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:background="@android:color/transparent"
-            android:fitsSystemWindows="true"
-            android:orientation="vertical"
-            android:paddingBottom="24dp"
-            android:paddingLeft="24dp"
-            android:paddingRight="24dp"
-            android:paddingTop="24dp"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
-
-            <TextView
-                android:visibility="invisible"
-                android:id="@+id/saluto_dashboard"
-                style="@style/TextAppearance.AppCompat.Display4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="viewStart"
-                android:textColor="@color/colorPrimary"
-                android:textSize="32dp"
-                android:textStyle="bold"
-                android:transitionName="titolo"/>
-
-            <TextView
-                style="@style/TextAppearance.AppCompat.Display4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="16dp"
-                android:text="E' un giorno bello per visitare un pò di chiese"
-                android:textAlignment="viewStart"
-                android:textSize="16dp"
-                android:transitionName="titolo"/>
-        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ricerca"
@@ -102,8 +65,9 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingTop="16dp"
-            app:layout_scrollFlags="snap"
-            android:transitionName="barra_ricerca">
+            android:transitionName="barra_ricerca"
+            android:visibility="gone"
+            app:layout_scrollFlags="snap">
 
             <TextView
                 android:id="@+id/ricerca_dashboard"
@@ -124,10 +88,43 @@
         android:overScrollMode="never"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingBottom="24dp"
+                android:paddingLeft="24dp"
+                android:paddingRight="24dp"
+                android:paddingTop="24dp">
+
+                <TextView
+                    android:id="@+id/saluto_dashboard"
+                    style="@style/TextAppearance.AppCompat.Display4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="32dp"
+                    android:textStyle="bold"
+                    android:transitionName="titolo"
+                    android:visibility="invisible"/>
+
+                <TextView
+                    style="@style/TextAppearance.AppCompat.Display4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="16dp"
+                    android:text="E' un giorno bello per visitare un pò di chiese"
+                    android:textAlignment="viewStart"
+                    android:textSize="16dp"
+                    android:transitionName="titolo"/>
+            </LinearLayout>
 
             <TextView
                 style="@style/Base.TextAppearance.AppCompat.Display1"
@@ -162,5 +159,10 @@
 
 
     </android.support.v4.widget.NestedScrollView>
+    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"/>
 
 </android.support.design.widget.CoordinatorLayout>
